Fix wrong font

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -3,7 +3,7 @@
   padding: 0
   outline: none
   box-sizing: border-box
-  font-family: 'Source Code Pro', sans-serif
+  font-family: 'Source Sans Pro', sans-serif
   -webkit-tap-highlight-color: transparent
 
 body
